[package]
name = "a01_divan_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
divan-macros = { version = "0.1.0", path = "macros" }

[dev-dependencies]
divan = "0.1.0"

[[bench]]
name = "example"
harness = false

[workspace]
members = ["macros"]

[workspace.dependencies]
divan = { path = "." }