[package]
name = "rust-perseus-todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = { version = "0.4.2", features = ["hydrate"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
sycamore = "0.8.2"
web-sys = { version = "0.3.64", features = ["InputEvent", "Event"] }

# Engine-only dependencies go here
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
perseus-axum = { version = "0.4.2", features = ["dflt-server"] }

# Browser-only dependencies go here
[target.'cfg(client)'.dependencies]

